<resources>
    <string name="app_name">Solar Safari</string>
    <string name="todo">TODO</string>
    <string name="sun_info">The Sun is a star located at the center of the Solar System, it is a nearly perfect spherical ball of hot plasma, it is the most important source of energy for life on Earth, It is 109 times bigger than Earth and has a mass of 330,000 times that of Earth, and its core is thought to reach temperatures of up to 27 million degrees Fahrenheit and pressures of up to 340 billion times that of Earth\'s atmosphere.</string>
    <string name="mercury_info">Mercury is the smallest and closest planet to the Sun in the Solar System. It has a diameter of about 4,880 km and a mass of about 3.3 x 10^23 kg. It is the second densest planet in the Solar System after Earth. Mercury has no natural satellites or atmosphere. Its surface is heavily cratered and rock-strewn, with cliffs, ridges and large impact craters. Its surface temperature varies greatly between the day and night side because it has no atmosphere to retain heat. Mercury has a very thin exosphere composed mainly of atoms that have been expelled from its surface by the solar wind. It completes an orbit around the sun in about 88 Earth days and rotates on its axis once every 58.6 Earth days.</string>
    <string name="venus_info">Venus is the second planet from the Sun in the Solar System. It has a diameter of about 12,104 km and a mass of about 4.87 x 10^24 kg. Venus has no natural satellites or rings. It has a thick atmosphere composed mostly of carbon dioxide and nitrogen, which causes a greenhouse effect that makes it the hottest planet in the Solar System. The surface temperature can reach up to 864 degrees Fahrenheit (462 degrees Celsius). The thick atmosphere also causes a thick layer of clouds that covers the entire planet, which makes it difficult to observe the surface. The atmosphere also causes strong winds and weather patterns. Venus has a very slow rotation on its axis, taking about 243 Earth days to complete one rotation. It completes an orbit around the Sun in about 225 Earth days.</string>
    <string name="earth_info">Earth is the only known planet to support life. It has a diameter of about 12,742 km and a mass of about 5.97 x 10^24 kg. It is the fifth densest planet in the Solar System. The Earth\'s atmosphere is composed mostly of nitrogen (78%) and oxygen (21%). The Earth has one natural satellite, the Moon. The Earth\'s rotation on its axis causes the phenomena of day and night, and its revolution around the Sun causes the change of seasons.</string>
    <string name="mars_info">Mars has a diameter of about 6,792 km and a mass of about 6.39 x 10^23 kg. Mars has two small natural satellites, Phobos and Deimos. Mars has a thin atmosphere composed mostly of carbon dioxide and also has dust storms that can cover the entire planet. The surface of Mars is dry and dusty, with large areas of reddish-brown, and it is characterized by mountains, valleys, and impact craters. The largest volcano in the Solar System, Olympus Mons, is located on Mars. The surface temperature varies greatly between the day and night side and can drop as low as -80 degrees Fahrenheit (-62 degrees Celsius).  It completes an orbit around the Sun in about 687 Earth days and rotates on its axis once every 24.6 Earth hours.</string>
    <string name="jupiter_info">Jupiter is the largest planet in the Solar System. It has a diameter of about 139,822 km and a mass of about 1.898 x 10^27 kg. Jupiter has 79 known natural satellites. Jupiter\'s atmosphere is composed mostly of hydrogen and helium, and it has a distinct layer of colorful clouds. The most notable feature in Jupiter\'s atmosphere is the Great Red Spot, which is a gigantic storm larger than the size of Earth. Jupiter has a strong magnetic field that generates intense radiation belts. Jupiter also has rings but they are much thinner and less extensive than those of Saturn. Jupiter completes an orbit around the Sun in about 11.86 Earth years and rotates on its axis once every 9 hours and 56 minutes.</string>
    <string name="saturn_info">Saturn is the second-largest planet in the Solar System. It has a diameter of about 116,460 km and a mass of about 5.683 x 10^26 kg. Saturn has 82 known natural satellites. Saturn\s atmosphere is composed mostly of hydrogen and helium, and it has a distinct layer of colorful clouds. Saturn is best known for its rings, which are made up of billions of ice particles of various sizes. The rings are divided into several distinct parts, and the largest of these, the B ring, is the most complex. Saturn has a strong magnetic field and generates intense radiation belts. It completes an orbit around the Sun in about 29.5 Earth years and rotates on its axis once every 10 hours and 39 minutes.</string>
    <string name="uranus_info">Uranus has a diameter of about 50,724 km and a mass of about 8.681 x 10^25 kg. Uranus has 27 known natural satellites. Uranus has a very distinctive feature, it rotates on its axis in a nearly horizontal position, which means that its poles are almost in the plane of its orbit. Uranus\'s atmosphere is composed mostly of hydrogen and helium, with small amounts of methane, which gives the planet its blue-green color. Uranus has a weak magnetic field and generates weak radiation belts. Uranus also has a set of thin rings, which were discovered in 1977. It completes an orbit around the Sun in about 84.01 Earth years and rotates on its axis once every 17 hours and 14 minutes.</string>
    <string name="neptune_info">Neptune is the farthest planet from the Sun in the Solar System. It has a diameter of about 49,244 km and a mass of about 1.024 x 10^26 kg. Neptune has 14 known natural satellites. Like Uranus, Neptune\'s atmosphere is composed mostly of hydrogen and helium, with small amounts of methane, which gives the planet its blue color. The most notable feature in Neptune\'s atmosphere is the Great Dark Spot, which is a gigantic storm similar to Jupiter\'s Great Red Spot. Neptune also has a set of thin rings. It completes an orbit around the Sun in about 164.8 Earth years and rotates on its axis once every 16 hours and 6 minutes.</string>
    <string name="mercury">Mercury</string>
    <string name="venus">Venus</string>
    <string name="earth">Earth</string>
    <string name="mars">Mars</string>
    <string name="jupiter">Jupiter</string>
    <string name="info">Info</string>
    <string name="third_planet">Third Planet</string>
    <string name="neptune">Neptune</string>
    <string name="uranus">Uranus</string>
    <string name="saturn">Saturn</string>

</resources>

