<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPlanet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/man_screen"
    tools:context=".InfoPage">

    <ImageView
        android:id="@+id/nextPg3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:rotation="90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <ImageView
        android:id="@+id/sun3"
        android:layout_width="600dp"
        android:layout_height="600dp"
        android:layout_marginEnd="-120dp"
        android:layout_marginBottom="730dp"
        android:contentDescription="@string/todo"
        android:translationZ="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/sun"
        tools:ignore="MissingConstraints,ImageContrastCheck" />

    <ImageView
        android:id="@+id/mercury3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="155dp"
        android:contentDescription="@string/todo"
        android:rotation="-60"
        android:translationZ="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mercury" />

    <ImageView
        android:id="@+id/venus3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="-110dp"
        android:layout_marginEnd="130dp"
        android:contentDescription="@string/todo"
        android:translationZ="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/venus" />

    <ImageView
        android:id="@+id/earth3"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="-130dp"
        android:layout_marginEnd="120dp"
        android:contentDescription="@string/todo"
        android:rotation="90"
        android:translationZ="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/earth" />

    <ImageView
        android:id="@+id/mars3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="-120dp"
        android:layout_marginEnd="125dp"
        android:contentDescription="@string/todo"
        android:rotation="50"
        android:translationZ="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mars"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/jupiter3"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="70dp"
        android:contentDescription="@string/todo"
        android:translationZ="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jupiter" />

    <ImageView
        android:id="@+id/saturn3"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/todo"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saturn" />

    <ImageView
        android:id="@+id/uranus3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="104dp"
        android:contentDescription="@string/todo"
        android:translationZ="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/uranus" />

    <ImageView
        android:id="@+id/neptune3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="750dp"
        android:layout_marginEnd="104dp"
        android:contentDescription="@string/todo"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/neptune" />

    <TextView
        android:id="@+id/mercuryHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="154dp"
        android:alpha="1.0"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/mercury"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:translationZ="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/venusHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="225dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/venus"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="7dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/earthHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="130dp"
        android:alpha="1.0"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/earth"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:translationZ="6dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/marsHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="580dp"
        android:layout_marginEnd="243dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/mars"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="5dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jupiterHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="120dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/jupiter"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/saturnHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="179dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/saturn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="3dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/uranusHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="155dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/uranus"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="2dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/neptuneHeading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="625dp"
        android:layout_marginEnd="160dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/neptune"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="1dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thePlanet"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/earth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/planetPanel"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:layout_marginBottom="-28dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/earth_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/planetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="366dp"
        android:fontFamily="@font/country_kitchen"
        android:text="@string/earth"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/underlinePg3"
        android:layout_width="79dp"
        android:layout_height="3dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="420dp"
        android:background="@drawable/border2"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/planetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginBottom="277dp"
        android:fontFamily="@font/cormorant_regular"
        android:text="@string/third_planet"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/planetInfo"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginTop="450dp"
        android:fontFamily="@font/cormorant_regular"
        android:padding="0dp"
        android:text="@string/info"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/popupBtnPg3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/popup_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>